--- a/proposal.org
+++ b/proposal.org
@@ -1,45 +1,77 @@
 #+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
-#+OPTIONS: author:t broken-links:nil c:nil creator:nil
-#+OPTIONS: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:t
+#+OPTIONS: author:nil broken-links:nil c:nil creator:t
+#+OPTIONS: d:(not "LOGBOOK") date:nil e:t email:nil f:t inline:t num:nil
 #+OPTIONS: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
-#+OPTIONS: timestamp:t title:t toc:t todo:t |:t
+#+OPTIONS: timestamp:t title:t toc:nil todo:t |:t
 #+TITLE: proposal
 #+DATE: <2019-03-31 Sun>
-#+AUTHOR: duzhe2
-#+EMAIL: duzhe2@huashidazhongbeitushuguan15deiMac-2.local
+#+AUTHOR: Yadong Cheung
+#+EMAIL: zhyd007@gmail.com
 #+LANGUAGE: en
 #+SELECT_TAGS: export
 #+EXCLUDE_TAGS: noexport
-#+CREATOR: Emacs 26.1 (Org mode 9.2)
+#+OPTIONS: html-link-use-abs-url:nil html-postamble:auto
+#+OPTIONS: html-preamble:t html-scripts:t html-style:t
+#+OPTIONS: html5-fancy:nil tex:t
+#+HTML_DOCTYPE: xhtml-strict
+#+HTML_CONTAINER: div
+#+DESCRIPTION:Apply for Blender of GSoC 2019
+#+KEYWORDS:GSoC Blender
+#+HTML_LINK_HOME:
+#+HTML_LINK_UP:
+#+HTML_MATHJAX:
+#+HTML_HEAD:
+#+HTML_HEAD_EXTRA:
+#+SUBTITLE: Proposal.pdf would be written in $\LaTeX$
+#+INFOJS_OPT:
+#+CREATOR: <a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2)
+#+LATEX_HEADER:
+
 
 * Name
-YadongCheung 张亚栋
+Yadong Cheung 张亚栋
 
 * Contact
-Email:
-zhyd007@gmail.com
-10154508169@stu.ecnu.edu.cn
-IRC nick: Cheung
+*Email:*
 
-* Synopsis
+zhyd007@gmail.com
+
+10154508169@stu.ecnu.edu.cn
+
+*IRC nick:* Cheung
+
+* TODO Synopsis
 
 * Benefits
+  More user-friendly and powerful outliner.
 
-* Deliverables
+* TODO Deliverables
 
 * Project Details
 
-* Project Schedule
+  - [ ] Shift-select to select a range of items.
+  - [ ] Box selection by simple click and drag.
+  - [ ] Shortcut keys for operations like delete, duplicate.
+  - [ ] Arrow key navigation.
+  - [ ] More consistent and powerful right-click menus.
+  - [ ] Sync selection between 3D viewport and outliner.
+
+* TODO Project Schedule
 
 * Bio
-My name is Yadong Cheung, I live in China.
+  My name is Yadong Cheung, I live in China.
 Currently studying at East China Normal University(ECNU).
-I major in preschool education so I like 3D modules especially in animals.
+I major in preschool education, UI design is my hobby, and I love 3D modules especially in animals.
+The first time that I know CG is the interdisciplinary course /The Film and Television Direct/ 
+I studied, which needed pecial effects modeling. I also started learning $\TeX$, the perfect
+typesetting system, last year. 
 
 ** Programming experience
-I like C programming language, and although I have no experience in products but
-I read the two books named The C Programming Language 2e and C Primer Plus 6e.
-I used to programming in XCode.
+I like *C* language, and although I have no experience in products but I read the two books which are konwn as
+\\ *The C Programming Language* /2e/ and
+*C Primer Plus* /6e/. I used to programming in XCode and Eclipse.
+I learned *Python* from edx, which course is
+ [[https://www.edx.org/course/introduction-to-computer-science-and-programming-using-python-0][Introduction to Computer Science and Programming Using Python]].
 
 * References
 
