get some idea, not too hard

--- a/proposal.org
+++ b/proposal.org
@@ -1,5 +1,5 @@
 #+SETUPFILE: https://fniessen.github.io/org-html-themes/setup/theme-readtheorg.setup
-#+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:t arch:headline
+#+OPTIONS: ':nil *:t -:t ::t <:t H:3 \n:nil ^:nil arch:headline
 #+OPTIONS: author:t broken-links:nil c:nil creator:t
 #+OPTIONS: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:nil
 #+OPTIONS: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
@@ -47,9 +47,10 @@ zhyd007@gmail.com
 
 * TODO Deliverables
 
-* Project Details
-
-  - [ ] Shift-select to select a range of items.
+* Project Details [1/6]
+  The major code is in source/blender/editors/space_outliner path.
+  - [X] Shift-select to select a range of items.\\
+    It is related to *tree's traversal* problem,
   - [ ] Box selection by simple click and drag.
   - [ ] Shortcut keys for operations like delete, duplicate.
   - [ ] Arrow key navigation.
