--- a/proposal.org
+++ b/proposal.org
@@ -4,7 +4,7 @@
 #+OPTIONS: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:nil
 #+OPTIONS: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
 #+OPTIONS: timestamp:t title:t toc:nil todo:t |:t 
-#+TITLE: proposal
+#+TITLE: Outliner Improvements
 #+DATE: <2019-03-31 21:31 Sun>
 #+AUTHOR: Yadong Cheung
 #+LANGUAGE: en
@@ -47,25 +47,32 @@ zhyd007@gmail.com
 
 * TODO Deliverables
 
-* Project Details [2/6]
+* Project Details [3/6]
   The major code is in /source/blender/editors// *space_outliner* && *space_view3d*
  path.
   - [X] Shift-select to select a range of items.\\
     It is related to *tree's traversal* problem,
   - [ ] Box selection by simple click and drag.
-  - [ ] Shortcut keys for operations like delete, duplicate.
+  - [X] Shortcut keys for operations like delete, duplicate.\\
+    *Keybinding* Sequence(meta keys)
+    - *M1*: This is the /Delete/ key
+    - *M2*: This is the /Shift/ key
+    - *M3*: This is the /Ctrl/ or /command/ key
   - [ ] Arrow key navigation.
   - [ ] More consistent and powerful right-click menus.
   - [X] Sync selection between 3D viewport and outliner.\\
     This has higher priority than the 1st item. 
-* TODO Project Schedule
+    We only need one way to show selections - the highlighted row.
+* Project Schedule
+  I could finish this project in 12 weeks, and about 1 item per 2 weeks.
 
 * Bio
   My name is Yadong Cheung, I live in China.
 Currently studying at East China Normal University(ECNU).
 I major in preschool education, UI design is my hobby, and I love 3D modules especially in animals.
 The first time that I know CG is the interdisciplinary course /The Film and Television Direct/ 
-I studied, which needed pecial effects modeling. I also started learning $\TeX$, the perfect
+I studied, which needed pecial effects modeling. HTML and CSS is based on web and it's designed for
+front-end engineer, maybe they could be helpful of outliner designing, I also started learning $\TeX$, the perfect
 typesetting system, last year. 
 
 ** Programming experience
@@ -76,4 +83,4 @@ I learned *Python* from edx, which course is
  [[https://www.edx.org/course/introduction-to-computer-science-and-programming-using-python-0][Introduction to Computer Science and Programming Using Python]].
 
 * References
-
+[1] Kulkarni, R. (2013). Instant Eclipse 4 RCP Development How-to. Packt Publishing Ltd.
