--- a/proposal.org
+++ b/proposal.org
@@ -4,7 +4,7 @@
 #+OPTIONS: d:(not "LOGBOOK") date:t e:t email:nil f:t inline:t num:nil
 #+OPTIONS: p:nil pri:nil prop:nil stat:t tags:t tasks:t tex:t
 #+OPTIONS: timestamp:t title:t toc:nil todo:t |:t 
-#+TITLE: Add more intelligent shortcut keys for outliner <draft>
+#+TITLE: Add more intelligent shortcut keys to outliner <draft>
 #+DATE: <2019-03-31 21:31 Sun>
 #+AUTHOR: Yadong Cheung
 #+LANGUAGE: en
@@ -41,8 +41,8 @@ zhyd007@gmail.com
 *IRC nick:* Cheung
 
 * Synopsis
-  For artists, keyboard shortcuts may more convenient than buttons clicking, and most of all features can be implement, such
- as "open files /<Ctrl+O>/", but there are some important features we need shortcuts, for example,to select all items 
+  For artists, keyboard shortcuts may more convenient than buttons clicking, and most of all features can be implemented, such
+ as "open files /<Ctrl+O>/", but there are some important features we need shortcuts, for example, to select all items 
 in-between, we  must click all one. 
 The project is designed to add more intelligent shortcuts to improve outliner.
 
@@ -50,10 +50,10 @@ The project is designed to add more intelligent shortcuts to improve outliner.
   More user-friendly and powerful outliner.
 
 * Deliverables
-** Improvemt User Experience of Outliner.
+** Improvement User Experience of Outliner.
    - Enter /<Del>/ to delete object.
    - Click the object you want to choose, press /<Shift>/ and click the last one you want, you will choose all between them.
-   - Click the first item you want to choose, press /<Ctrl>/ and click other ones, you can choose them ignore the other between them.
+   - Click the first item you want to choose, press /<Ctrl>/ and click other ones, you can choose them and ignore the other between them.
    - Add a component "Synced Selection".
 * Project Details [3/6]
   *code layout*: /space_outliner --> interface --> object --> windowmanager/ \\
@@ -64,25 +64,25 @@ The project is designed to add more intelligent shortcuts to improve outliner.
   - [X] Sync selection between 3D viewport and outliner.\\
     We only need one way to show selections - the highlighted row.
   - [X] Shift-select to select a range of items.\\
-    It is related to *tree's traversal* problem, and shortcut keys binding.
+    It is related to the *tree's traversal* problem, and shortcut keys binding.
   - [ ] Box selection by simple click and drag.\\  
   - [ ] Arrow key navigation.
   - [ ] More consistent and powerful right-click menus.
 * Project Schedule
-  I could finish this project in 12 weeks, and about 1 item per 2 weeks.(more details...)
+  I could finish this project in 12 weeks and about 1 item per 2 weeks. (more details...)
 
 * Bio
   My name is Yadong Cheung, I live in China.
 Currently studying at East China Normal University(ECNU).
 I major in preschool education, UI design is my hobby, and I love 3D modules especially in animals.
 The first time that I know CG is the interdisciplinary course /The Film and Television Direct/ 
-I studied, which needed pecial effects modeling. HTML and CSS is based on web and it's designed for
+I studied, which needed special effects modeling. HTML and CSS are based on web and it's designed for
 front-end engineer, maybe they could be helpful of outliner designing, I also started learning $\TeX$, the perfect
 typesetting system, last year. 
 
 ** Programming experience
-I like *C* language, and although I have no experience in products but I read the two books which are konwn as
+I like *C* language, and although I have no experience in products but I read the two books which are known as
  *The C Programming Language* /2e/ and
-*C Primer Plus* /6e/. I used to programming in XCode and Eclipse.
+*C Primer Plus* /6e/. I used to programme in XCode and Eclipse.
 I learned *Python* from edx, which course is
  [[https://www.edx.org/course/introduction-to-computer-science-and-programming-using-python-0][Introduction to Computer Science and Programming Using Python]].
